  *  Allow pending concepts to have pending concept parents (without logging a warning at startup)
  *  Fix bug on "View Concept" menu option when the concept in question was a pending concept.  Also allow
  		viewing of pending concepts, and show GUI indicator on pending concepts.
  *  Fixed a bug with showing the error dialog.
  *  artf227644 - Add CEM import / viewer tool.
  *  artf227406 - Add support for drools rule processing.
  *  artf227504 - Add type-ahead searching for all concept fields.

2013/03/14 - 0.57
  *  Fixed the summary view on/off switch so it takes effect on Legos that are already open.
  *  Fixed the behavior of the left arrow key in the concept combo-box editors
  *  Changed the behavior of the concept combo-box editors so that you don't lose the entire entry if 
  		the lookup fails. 
  *  Fixed a null pointer that could happen during certain copy operations
  *  Fixed a null pointer in the interval validator that could happen after a particular sequence
  		of add and remove operations.
  *  Fixed the LegoList tree so that you don't lose the scroll position everytime the filter is reapplied
  		(after adding a new Lego, or saving changes to a lego, for example)
  *  Fixed the auto-sizing of the error display dialog.
  *  Fixed a bug that would cause the editor to not display relations and relation groups properly after 
  		an expression was removed from a conjunction which only contained 2 expressions.
  *  Various spacing and alignment fixes for various nodes in the editor area.
  *  Add the ability to view Lego Lists and Legos in the system web browser.
  *  artf227502 Reworked parts of the lego editor so some fields take up less vertical space.
  		AssertionComponents now put the type editor on the same line as the label.
  		Expressions that are simple (only one concept) are now displayed on a single line.
  		The Relation Type field is now displayed on the first Relation line, rather than on a line by itself.