@@ -14,6 +14,7 @@ Lego Editor Change Log
   *  Fix bug on "View Concept" menu option when the concept in question was a pending concept.  Also allow
   		viewing of pending concepts, and show GUI indicator on pending concepts.
   *  Fixed a bug with showing the error dialog.
+  *  Fixed browser launching on Mac.
   *  artf227644 - Add CEM import / viewer tool.
   *  artf227406 - Add support for drools rule processing.
   *  artf227504 - Add type-ahead searching for all concept fields.
